# feo-boy

./: .gitmodules  0.index.js  1.index.js  Cargo.toml  README.md  build.rs  index.html  index.js  make.sh  make2.sh
.cargo/: config
.github/workflows/: ci.yaml  pages.yaml
definitions/: instructions.tsv  prefix.tsv
feo-boy/: feo-boy.js  feo-boy_bg.wasm
src/: audio.rs  bus.rs  bytes.rs  cpu.rs  errors.rs  graphics.rs  input.rs  lib.rs  main.rs  memory.rs  tui.rs  web.rs
src/audio/: mod.rs  output.rs
src/bus/: mod.rs  timer.rs
src/cpu/: arithmetic.rs  clock.rs  instructions.rs  mod.rs  registers.rs  timer.rs
src/cpu/instructions/: mod.rs  prefix.rs
src/graphics/: mod.rs  palette.rs
src/memory/: mbc.rs  mod.rs
tests/: blargg.rs  mooneye.rs  sm83.rs
web/: bootstrap.js  index.html  index.ts  package-lock.json  package.json  styles.scss  tsconfig.json  webpack.config.js
