[package]
name = "feo-boy"
version = "0.1.0"
authors = [
    "Andy Russell <arussell123@gmail.com>",
    "Andrew Fishberg <fishberg.github@gmail.com>",
    "Max Comstock <maxibillion6@gmail.com>",
]
description = "Emulator for the Nintendo Game Boy"
edition = "2018"

[[bin]]
name = "feo-boy"
doc = false
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
bitflags = "1"
byteorder = "1"
derive_more = "0.7"
itertools = "0.7"
lazy_static = "1.4.0"
log = "0.3"
pixels = "0.0.4"
pretty_env_logger = "0.1"
regex = "0.2"
rustyline = "1"
sdl2 = "0.31"
smallvec = "0.5"
structopt = "0.3.14"
thiserror = "1.0.19"
winit = "0.22.2"
winit_input_helper = "0.7.0"

[build-dependencies]
anyhow = "1.0.31"
csv = "1.0.0-beta.5"
quote = "0.3"
serde = "1"
serde_derive = "1"

[dev-dependencies]
quickcheck = "0.4"
rand = "0.3"
