[package]
name = "feo-boy"
version = "0.1.0"
authors = [
    "Andy Russell <arussell123@gmail.com>",
    "Andrew Fishberg <fishberg.github@gmail.com>",
    "Max Comstock <maxibillion6@gmail.com>",
]
description = "Emulator for the Nintendo Game Boy"
edition = "2018"

[[bin]]
name = "feo-boy"
doc = false
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
bitflags = "1.2.1"
byteorder = "1.3.4"
derive_more = "0.99.7"
itertools = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.8"
pixels = "0.2.0"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
rustyline = "6.2.0"
smallvec = "1.4.0"
structopt = "0.3.14"
thiserror = "1.0.19"
winit = "0.23.0"
winit_input_helper = "0.8.0"

[build-dependencies]
anyhow = "1.0.31"
csv = "1.1.3"
quote = "1.0.7"
serde = { version = "1.0.111", features = ["derive"] }

[dev-dependencies]
indoc = "1.0.3"
quickcheck = "0.9.2"
rand = "0.7.3"
