[package]
name = "feo-boy"
version = "0.1.0"
authors = [
    "Andy Russell <arussell123@gmail.com>",
    "Andrew Fishberg <fishberg.github@gmail.com>",
    "Max Comstock <maxibillion6@gmail.com>",
]
description = "Emulator for the Nintendo Game Boy"
edition = "2021"

[[bin]]
name = "feo-boy"
doc = false
path = "src/main.rs"

[dependencies]
anyhow = "1.0.31"
bitflags = "1.2.1"
byteorder = "1.3.4"
cpal = "0.13.1"
derivative = "2.1.1"
derive_more = "0.99.7"
itertools = "0.10.3"
lazy_static = "1.4.0"
log = "0.4.8"
num_enum = "0.5.1"
pixels = "0.9.0"
pretty_env_logger = "0.4.0"
regex = "1.3.9"
rustyline = "9.1.2"
smallvec = "1.4.0"
structopt = "0.3.14"
thiserror = "1.0.19"
winit = "0.26.1"
winit_input_helper = "0.11.1"

[build-dependencies]
anyhow = "1.0.31"
csv = "1.1.3"
quote = "1.0.7"
serde = { version = "1.0.111", features = ["derive"] }

[dev-dependencies]
indoc = "1.0.3"
pipe = "0.4.0"
proptest = "1.0.0"
quickcheck = "1.0.3"
